# CaoVM

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CMake/: FetchLagom.cmake
Example/: Test.java
Scripts/: build-and-run.sh  setup.sh
src/: Attribute.cpp  Attribute.h  ClassFile.h  ClassParser.cpp  ClassParser.h  ConstantInfo.cpp  ConstantInfo.h  ConstantPool.cpp  ConstantPool.h  ConstantTag.h  Descriptor.h  main.cpp
src/Interpreter/: ConstantPool.cpp  ConstantPool.h  SymbolicatedConstantPool.cpp  SymbolicatedConstantPool.h  SymbolicatedReference.cpp  SymbolicatedReference.h
src/Parser/: Attribute.cpp  Attribute.h  ClassFile.h  ClassParser.cpp  ClassParser.h  ConstantInfo.cpp  ConstantInfo.h  ConstantPool.cpp  ConstantPool.h
